fix: hide overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@ body {
   position: relative;
 }
 
+.map-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
 .map-container {
   height: 100vh;
   width: 100vw;
